sqlite/conformance/sqlite-sqltests/snapshots/multi_index_or_compound__compound-or-correlated-subquery-eqp.snap
---
source: multi_index_or_compound.sqltest
expression: |-
  SELECT b FROM t
      WHERE (a = 1 AND EXISTS(SELECT 1 FROM u WHERE u.x = t.b))
         OR (a = 2 AND EXISTS(SELECT 1 FROM u WHERE u.x = t.b));
info:
  statement_type: SELECT
  tables:
  - t
  - u
  setup_blocks:
  - correlated_subquery_schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN t
|--CORRELATED SCALAR SUBQUERY 1
|  `--SCAN u
`--CORRELATED SCALAR SUBQUERY 2
   `--SCAN u
