sqlite/conformance/sqlite-sqltests/snapshots/multi_index_or_compound__compound-or-mixed-residual-eqp.snap
---
source: multi_index_or_compound.sqltest
expression: |-
  SELECT DISTINCT i.id
      FROM item i
      JOIN link l
        ON (
          (l.src = 'n1' AND l.dst = i.id AND ((i.type = 'entity' AND l.label = 'knows') OR l.id = 'e4'))
          OR
          (l.dst = 'n1' AND l.src = i.id AND ((i.type = 'entity' AND l.label = 'knows') OR l.id = 'e4'))
        );
info:
  statement_type: SELECT
  tables:
  - item
  - link
  setup_blocks:
  - graph_schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN link AS l
|--MULTI-INDEX OR i (sqlite_autoindex_item_1, sqlite_autoindex_item_1)
`--USE HASH TABLE FOR DISTINCT
