sqlite/conformance/sqlite-sqltests/snapshots/multi_index_or_compound__compound-or-parenthesized-between-branch-eqp.snap
---
source: multi_index_or_compound.sqltest
expression: |-
  SELECT a FROM t2
      WHERE b = 60 OR ((a BETWEEN 2 AND 4) AND a != 3);
info:
  statement_type: SELECT
  tables:
  - t2
  setup_blocks:
  - paren_branch_schema
  database: ':memory:'
---
QUERY PLAN
`--MULTI-INDEX OR t2 (idx_t2_b, PRIMARY KEY)
