sqlite/conformance/sqlite-sqltests/snapshots/multi_index_or_compound__compound-or-rowid-branch-eqp.snap
---
source: multi_index_or_compound.sqltest
expression: |-
  SELECT rowid, a FROM t
      WHERE (rowid = 1 AND rowid > 0)
         OR (a = 20 AND a > 0);
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - rowid_branch_schema
  database: ':memory:'
---
QUERY PLAN
`--MULTI-INDEX OR t (PRIMARY KEY, idx_t_a)
